--- a/frontend/src/pages/GitSearch/styles.css
+++ b/frontend/src/pages/GitSearch/styles.css
@@ -1,34 +1,37 @@
-.cep-search-container {
+.git-search-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 20px;
+  justify-content: left;
+  margin: 20px;
+  
 }
 
-.cep-search-container h1 {
-  font-weight: bold;
-  text-align: center;
-  margin: 50px 0;
+.git-search-container h1 {
+  font-size: 24px;
+  text-align: left;
+  padding: 10px 0;
 }
 
 .search-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 30px 40px;
-  background-color: #f6f6f6;
-  border-radius: 5px;
+  align-items: left;
+  justify-content: start; 
+  padding: 20px;
+  background-color: #E6F7FF;
+  min-width: 280px;
+  border-radius: 16px;
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
 
 .search-input {
   background-color: #fff;
-  border: 1px solid #8c8c8c;
+  border: 1px solid #D9D9D9;
   border-radius: 4px;
   font-size: 16px;
   text-align: center;
@@ -42,15 +45,25 @@
 }
 
 .search-button {
+  font-size: 16px;
   height: 40px;
-  width: 160px;
+  width: 100px;
   margin-bottom: 35px;
   color: #fff;
 }
 
 
 @media (min-width: 576px) {
+  .git-search-container h1 {
+    font-size: 30px;
+  }
     .search-input {
-        width: 480px;
+        width: 280px;
     }
+}
+
+@media (min-width: 768px) {
+  .git-search-container h1 {
+    font-size: 38px;
+  }
 }
